tab contrast fix

--- a/css/tao.css
+++ b/css/tao.css
@@ -154,7 +154,7 @@ margin: 0;
 
 .tile-category {
     font-size: 14px;
-    color: #7f7f7f;
+    color: #c6c6c6;
     font-weight: 100;
     margin: 2em auto 0 0;
     width: 25%;
@@ -172,7 +172,7 @@ margin: 0;
 
 .tile-count {
     font-size: 14px;
-    color: #7f7f7f;
+    color: #c6c6c6;
     font-weight: 100;
     margin: 2em auto 0 -20px;
     width: 25%;
